--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "dependencies": {
     "axios": "^0.27.2",
     "core-js": "^3.8.3",
-    "gridjs-vue": "^5.0.4",
+    "gridjs": "^5.1.0",
     "leaflet": "^1.8.0",
     "vue": "^2.6.14",
     "vue2-leaflet": "^2.7.1",
