--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
-    "target": "es5",
-    "module": "esnext",
+    "target": "es6",	// set compiler version to ES6
+    "module": "ES6",
     "jsx": "preserve",
     "baseUrl": "./",
     "moduleResolution": "node",
