--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "gridjs": "^5.1.0",
     "leaflet": "^1.8.0",
     "vue": "^2.6.14",
+    "vue-router": "^3.5.1",
     "vue2-leaflet": "^2.7.1",
     "vuetify": "^2.6.0"
   },
@@ -22,6 +23,7 @@
     "@mdi/font": "^7.0.96",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
+    "@vue/cli-plugin-router": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
