--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,4 @@
-PORT=3000
-NODE_ENV=development
-# API
-CLIENT_ID=K6fAWcc4a7T8I9lIMvVl28fRO02UQwnX
-CLIENT_SECRET=sD6bReG5iIxVXU03
+NODE_ENV= development
+PORT= 3000
+AMADEUS_CLIENT_ID= 3whZ3AwviarabktoVHTUeAJIURiANRJS
+AMADEUS_CLIENT_SECRET= yFiUFHZ2w5xoZGF6
