--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,15 @@
 .DS_Store
 node_modules
 /dist
+package-lock.json
+backend/package-lock.json
 
 
 # local env files
 .env.local
 .env.*.local
 /backend/.env
+.env
 
 # Log files
 npm-debug.log*
@@ -22,6 +25,4 @@ pnpm-debug.log*
 *.njsproj
 *.sln
 *.sw?
-backend/.env
-package-lock.json
-backend/package-lock.json
+
