--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,20 +1,13 @@
 {
   "compilerOptions": {
-    "target": "es6",	// set compiler version to ES6
-    "module": "ES6",
+    "target": "ES5", 
+    "module": "ES2015",
     "jsx": "preserve",
     "baseUrl": "./",
     "moduleResolution": "node",
     "paths": {
-      "@/*": [
-        "src/*"
-      ]
+      "@/*": ["src/*"]
     },
-    "lib": [
-      "esnext",
-      "dom",
-      "dom.iterable",
-      "scripthost"
-    ]
+    "lib": ["esnext", "dom", "dom.iterable", "scripthost"]
   }
 }
