--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@googlemaps/google-maps-services-js": "^3.3.27",
     "amadeus": "^7.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.2",
