--- a/backend/package.json
+++ b/backend/package.json
@@ -15,8 +15,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
-    "morgan": "^1.10.0",
-    "socket.io": "^4.5.2"
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
     "@babel/node": "^7.18.10",
